<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.conveyal</groupId>
    <artifactId>datatools-server</artifactId>
    <version>3.8.1-SNAPSHOT</version>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <!-- Developer entries are provided for primary developers.
   For other contributors, see https://github.com/ibi-group/datatools-server/graphs/contributors -->
    <developers>
        <developer>
            <name>Landon Reed</name>
            <email>landon.reed@ibigroup.com</email>
            <organization>IBI Group</organization>
            <organizationUrl>https://ibigroup.com/</organizationUrl>
        </developer>
        <developer>
            <name>Evan Siroky</name>
            <email>evan.siroky@ibigroup.com</email>
            <organization>IBI Group</organization>
            <organizationUrl>https://ibigroup.com/</organizationUrl>
        </developer>
    </developers>

    <!-- Define where the source code for project lives -->
    <scm>
        <connection>scm:git:https://github.com/ibi-group/datatools-server.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/ibi-group/datatools-server.git</developerConnection>
        <url>https://github.com/ibi-group/datatools-server.git</url>
    </scm>
    <properties>
        <jackson.version>2.12.1</jackson.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Using the latest version of geotools (e.g, 20) seems to cause issues with the shapefile
        plugin where the_geom for each feature is null. -->
        <geotools.version>20.1</geotools.version>
        <awsjavasdk.version>1.11.625</awsjavasdk.version>
    </properties>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.properties</include>
                    <include>logback.xml</include>
                    <include>gtfs/*</include>
                    <include>public/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <finalName>dt-${git.commit.id.describe}</finalName>
                            <transformers>
                                <!-- files overwrite each other and geotools does not function without this.
                                         http://docs.geotools.org/latest/userguide/faq.html#how-do-i-create-an-executable-jar-for-my-geotools-app -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>

                            <!-- signature files from included jars cause problems: http://stackoverflow.com/questions/999489 -->
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <!-- the below line will automatically generate the git properties file which is needed for the
                     SeverController to fully function.
                    -->
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <injectAllReactorProjects>true</injectAllReactorProjects>
                    <!-- "git describe always" needed to keep GitHub actions from failing
                          See: https://github.com/git-commit-id/git-commit-id-maven-plugin/issues/61#issuecomment-68037525
                     -->
                    <gitDescribe>
                        <skip>false</skip>
                        <always>true</always>
                    </gitDescribe>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.conveyal.datatools.manager.DataManager</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!-- This plugin generates code coverage reports during the test phase of maven. -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- maven-surefire-plugin is needed to run unit tests. -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <!-- This line is required to get this library, designed for older Java, to work with newer java. -->
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <!--  used for importing java projects from github -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!-- Hack to force maven to check central first. Maven central is inherited from the superpom,
             but ends up at the end of the list. Though most of the time the artifact is in central,
             Maven tries to download from every other repository and fails before checking central.
             Do not change the id from central2 to central, otherwise the entry will be ignored. -->
        <repository>
            <id>central2</id>
            <name>check central first to avoid a lot of not found warnings</name>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
        <!--  Repository for geotools (as of April 2020)  -->
        <repository>
            <id>osgeo</id>
            <name>OSGeo Release Repository</name>
            <url>https://repo.osgeo.org/repository/release/</url>
            <snapshots><enabled>false</enabled></snapshots>
            <releases><enabled>true</enabled></releases>
        </repository>
        <repository>
            <id>sonatype</id>
            <name>sonatype snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <!-- Handles HTTP server -->
        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-core</artifactId>
            <version>2.9.4</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.12</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>

        <!-- Used to connect to and import legacy editor MapDBs -->
        <dependency>
            <groupId>org.mapdb</groupId>
            <artifactId>mapdb</artifactId>
            <version>1.0.8</version>
        </dependency>

        <!-- Used for MappedSuperClass annotation on Model classes -->
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>javax.persistence</artifactId>
            <version>2.1.0</version>
        </dependency>

        <!-- Used for testing (note: this should match the version in gtfs-lib). -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Provides JUnit 5.x parametrized tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mobilitydata.gtfs-validator</groupId>
            <artifactId>gtfs-validator-main</artifactId>
            <version>4.1.0</version>
        </dependency>
        <!-- Used for loading/fetching/validating/writing GTFS entities. gtfs-lib also provides access to:
         - commons-io - generic utilities
         - AWS S3 SDK - putting/getting objects into/out of S3.
         -->
        <dependency>
            <groupId>com.github.conveyal</groupId>
            <artifactId>gtfs-lib</artifactId>
            <!-- Latest dev build on jitpack.io -->
            <version>b657dfe7d7</version>
            <!-- Exclusions added in order to silence SLF4J warnings about multiple bindings:
                http://www.slf4j.org/codes.html#multiple_bindings
            -->
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-simple</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Used for application database -->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.0.6</version>
        </dependency>

        <!-- Miscellaneous utilities -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.0.0-jre</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.3.1</version>
        </dependency>


        <!-- Note: Unless we are explicit with the jackson dependencies listed below, other versions included in other
        dependencies may cause conflicts. Specifically, there is an issue with the JsonAlias annotation (used in
        com.conveyal.datatools.manager.models.Snapshot) not working properly.-->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- Handles parsing yaml config -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Used to send email notifications to subscribing users. Note: datatools-server also depends on this library
         for commons lang3 from org.apache.commons. -->
        <dependency>
            <groupId>com.sparkpost</groupId>
            <artifactId>sparkpost-lib</artifactId>
            <version>0.27</version>
        </dependency>

        <!-- Efficient collections for primitive types -->
        <dependency>
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>3.0.3</version>
        </dependency>

        <!-- Used for handling shapefiles -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-shapefile</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <!-- gt-metadata and gt-api contains some dependencies required by gt-shapefile -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-metadata</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-api</artifactId>
            <version>${geotools.version}</version>
        </dependency>
        <!-- gt-epsg-hsql includes coordinate reference libraries that were removed from gtfs-lib in
             https://github.com/conveyal/gtfs-lib/pull/290 -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>${geotools.version}</version>
        </dependency>

        <!-- Error reporting -->
        <dependency>
            <groupId>com.bugsnag</groupId>
            <version>3.6.2</version>
            <artifactId>bugsnag</artifactId>
        </dependency>

        <!-- JWT verification for Auth0 -->
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>2.3.0</version>
        </dependency>

        <!-- Rest Assured is an assertion library that makes testing web APIs easy. -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>3.1.1</version>
            <scope>test</scope>
        </dependency>
        <!-- Hamcrest is an assertion library that prints pretty messages when assertions fail -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>java-hamcrest</artifactId>
            <version>2.0.0.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Snapshotting library for testing -->
        <dependency>
            <groupId>com.github.conveyal</groupId>
            <artifactId>java-snapshot-matcher</artifactId>
            <version>3495b32f7b4d3f82590e0a2284029214070b6984</version>
            <scope>test</scope>
        </dependency>
        <!-- wiremock is used to mock http requests -->
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <version>2.14.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Used to write YAML files -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.26</version>
        </dependency>
        <!-- Used for writing csv for merged feeds. Note: this appears to be one of the only
          CSV libraries that will only quote values when necessary (e.g., there is a comma character
          contained within the value) and that will work with an output stream writer when writing
          directly to a zip output stream.
          -->
        <dependency>
            <groupId>net.sf.supercsv</groupId>
            <artifactId>super-csv</artifactId>
            <version>2.4.0</version>
        </dependency>
        <!-- AWS individual module imports (S3 imported by gtfs-lib) -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-ec2</artifactId>
            <version>${awsjavasdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-iam</artifactId>
            <version>${awsjavasdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-elasticloadbalancingv2</artifactId>
            <version>${awsjavasdk.version}</version>
        </dependency>
        <!-- AWS STS allows Data Tools to assume other roles in order to deploy OTP to other AWS accounts. -->
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sts</artifactId>
            <version>${awsjavasdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
    </dependencies>

</project>
